WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20202
Missing http status line from the http headers
https://bugs.webkit.org/show_bug.cgi?id=20202
Summary
Missing http status line from the http headers
Dimcho Balev
Reported
2008-07-28 14:28:55 PDT
Windows only: WebKit is not adding the http status line in front of the HTTP headers that it passes to NPAPI plugins (for example - "HTTP/1.0 200 OK"). This is very important information for plugins like Flash Player since it is the only way to find out what is the HTTP status code for a given HTTP request. Webkit for Mac works fine - it is a problem only in the windows specific code. Related bug: 18676
Attachments
Test case
(25.87 KB, application/octet-stream)
2008-07-28 14:54 PDT
,
Dimcho Balev
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dimcho Balev
Comment 1
2008-07-28 14:54:39 PDT
Created
attachment 22530
[details]
Test case 1. Install flash player 10 beta 2. Open the swf file in Safari for Mac. 3. Press the connect button 4. Look for "status=" in the left text pane. Note that it is not 0. (It should be 200 on success) 5. Open the same swf file in Safari for Windows 6. Press the connect button 7. Note that you will always get "status=0" regardless of the result of the http request. This is because Flash player can not find the status line in the http headers so it returns the default value which is 0.
Anders Carlsson
Comment 2
2008-08-28 10:09:56 PDT
<
rdar://problem/6182541
>
Anders Carlsson
Comment 3
2008-08-28 10:27:22 PDT
Committed revision 25971.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug