2008-08-28  Anders Carlsson  <andersca@apple.com>

Reviewed by Kevin and Darin.

        <rdar://problem/6182541>
        https://bugs.webkit.org/show_bug.cgi?id=20202
        Missing http status line from the http headers.

        Add a status line to the header string.

        * plugins/PluginStream.cpp:
        (WebCore::PluginStream::startStream):



Canonical link: https://commits.webkit.org/28374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35971 268f45cc-cd09-0410-ab3c-d52691b4dbfc